[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "luwakx"
dynamic = ["version"]
description = "Config-driven DICOM anonymization tool based on the 2025b DICOM standard"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Simona Lombardo", email = "simonalombardo88@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["dicom", "anonymization", "de-identification", "medical imaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydicom",
    "requests",
    "beautifulsoup4",
    "pandas",
    "pyarrow",
    "jsonschema",
    "psutil",
    "openai",
    "SimpleITK",
    "vedo",
    "httpx",
    "numpy",
    "tqdm",
    "moosez",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
luwakx = "luwakx.luwakx:main"

[project.urls]
Homepage = "https://github.com/ZentaLabs/LUWAKX"
Repository = "https://github.com/ZentaLabs/LUWAKX"
Documentation = "https://github.com/ZentaLabs/LUWAKX/blob/main/docs/deidentification_conformance.md"
"Bug Tracker" = "https://github.com/ZentaLabs/LUWAKX/issues"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["luwakx*"]

[tool.setuptools.package-data]
luwakx = ["data/**/*", "scripts/**/*"]
